--- a/src/javascriptmvc/apps/main/index.html
+++ b/src/javascriptmvc/apps/main/index.html
@@ -55,6 +55,7 @@
     }
 </script>
 <script language="javascript" type="text/javascript" src="../../resources/jquery-1.7.1.js"></script>
+<script language="javascript" type="text/javascript" src="../../resources/jquery.noty-2.2.2.packaged.js"></script>
 <script language="javascript" type="text/javascript" src="../../resources/jquery-ui-1.8.16.custom.js"></script>
 <script language="javascript" type="text/javascript" src="../../jmvc/include.js?main,development"></script>
 </body>
